# score_card

./: .gitignore  HISTORY.md  README.md  buildozer.spec  justfile  main.py  pyproject.toml
src/score_card/: __init__.py  constants.py  main.py  score_gui.py  text.py
src/score_card/kv/: main_menu.kv  new_event.kv
src/score_card/models/: event.py
src/score_card/screens/: new_event.py
tests/: test_version.py
