[project]
name = "score_card"
version = "0.1.0"
description = "Score card for bridge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kivymd",
    "psiutils>=0.2.33",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff>=0.15.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/score_card"]

[tool.uv.sources]
kivymd = { git = "https://github.com/kivymd/KivyMD.git" }
